# promting-assistant

./: README.md  main.py  pyproject.toml
app/: config.py  file_scanner.py  main_window.py  settings_widget.py  worker.py
app/parser_services/: docker_parser.py  python_parser.py  toml_parser.py
tests/: test_app.py  test_parser_services.py
